ressources-fluentd/k8s/elasticsearch/es-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: monitoring-elk
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
        resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: vol-pvc
      volumes:
        - name: vol-pvc
          persistentVolumeClaim:
            claimName: tp-pvc
