ressources-fluentd/k8s/elasticsearch/es-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-elasticsearch
  namespace: monitoring-elk
spec:
  type: ClusterIP
  selector:
    name: elasticsearch
  ports:
    #--port du service interne
    - port: 9200
    #--- port du conteneur
      targetPort: 9200
      name: elasticsearch-port-1
    - port: 9300
    #--- port du conteneur
      targetPort: 9300
      name: elasticsearch-port-2
